crates/reinhardt-core/macros/tests/ui/settings/fail/composition_invalid_exclusion.rs
use reinhardt_macros::settings;

#[settings(!SomeRandomType)]
pub struct BadSettings;

fn main() {}
