crates/reinhardt-core/macros/tests/ui/settings/fail/composition_invalid_exclusion.stderr
error: Cannot exclude `SomeRandomType`: it is not implicitly included. Remove the `!` prefix.
 --> tests/ui/settings/fail/composition_invalid_exclusion.rs:3:1
  |
3 | #[settings(!SomeRandomType)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)
